--- a/assets/style/globals.scss
+++ b/assets/style/globals.scss
@@ -1,38 +1,38 @@
-@import "./media.scss";
-@import "./backgrounds";
+@import './media.scss';
+@import './backgrounds';
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  -webkit-text-size-adjust: 100%;
-  @media (min-width: $M) {
-    -webkit-text-size-adjust: auto;
-  }
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	-webkit-text-size-adjust: 100%;
+	@media (min-width: $M) {
+		-webkit-text-size-adjust: auto;
+	}
 }
 
 html {
-  position: relative;
-  min-height: 100vh;
-  height: 100vh;
-  font-size: calc(100vw / 375);
-  @media (min-width: $M) {
-    font-size: calc(100vw / 768);
-  }
-  @media (min-width: $XL) {
-    font-size: calc(100vw / 1366);
-  }
+	position: relative;
+	min-height: 100dvh;
+	height: 100dvh;
+	font-size: calc(100vw / 375);
+	@media (min-width: $M) {
+		font-size: calc(100vw / 768);
+	}
+	@media (min-width: $XL) {
+		font-size: calc(100vw / 1366);
+	}
 }
 
 body {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  min-height: 100%;
-  overflow-x: hidden;
-  @include backgroundAnimated();
+	position: relative;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	min-height: 100%;
+	overflow-x: hidden;
+	@include backgroundAnimated();
 }
