--- a/components/common/Button/style.module.scss
+++ b/components/common/Button/style.module.scss
@@ -1,40 +1,10 @@
-@import '../../../assets/style/colors.scss';
-@import '../../../assets/style/fontsMixins.scss';
+@import '@/assets/style/colors.scss';
+@import '@/assets/style/fontsMixins.scss';
+@import '@/assets/style/mixins.scss';
 
 .link {
 	width: 100%;
 	height: 50rem;
 
-	.button {
-		@include InterMed_18();
-		width: 100%;
-		height: 100%;
-		border-radius: 10rem;
-		outline: none;
-		border: none;
-		padding: 5rem 20rem;
-		color: white;
-		background: $primary-orange-button;
-		overflow: hidden;
-		transition: opacity 0.2s ease-out;
-	}
-
-	.button:disabled {
-		background: grey;
-		opacity: 0.4;
-	}
-
-	.button:not([disabled]):hover {
-		opacity: 0.8;
-		cursor: pointer;
-	}
-
-	.primary-orange {
-		background: $primary-orange-button;
-		color: white;
-	}
-
-	.secondary-orange {
-		background: $dark-button;
-	}
+	@include Button();
 }
