--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,8 +1,17 @@
-@import "../assets/style/fontsMixins";
-
+@import '../assets/style/fontsMixins';
+@import '@/assets/style/mixins';
 .app {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-  justify-content: center;
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+	height: 100%;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+
+	div {
+		display: flex;
+		width: fit-content;
+		@include Button();
+	}
 }
