--- a/assets/style/globals.scss
+++ b/assets/style/globals.scss
@@ -14,25 +14,28 @@
 html {
 	position: relative;
 	min-height: 100dvh;
-	height: 100dvh;
-	font-size: calc(100vw / 375);
+	height: fit-content;
+	font-size: calc(100vw / 430);
 	@media (min-width: $M) {
-		font-size: calc(100vw / 768);
+		font-size: calc(100vw / 744);
 	}
 	@media (min-width: $XL) {
-		font-size: calc(100vw / 1366);
+		font-size: calc(100vw / 1920);
 	}
 }
 
 body {
+	display: flex;
+	flex-direction: column;
 	position: relative;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: fit-content;
 	margin: 0;
 	padding: 0;
-	min-height: 100%;
+	min-height: 100dvh;
+	overflow-y: visible !important;
 	overflow-x: hidden;
 	@include backgroundAnimated();
 }
