Registration logig settled

--- a/app/registration/style.module.scss
+++ b/app/registration/style.module.scss
@@ -1,7 +1,7 @@
 @import '../../assets/style/containers';
 @import '../../assets/style/fontsMixins';
 
-.loginMainContainer {
+.registrationMainContainer {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
