--- a/components/common/Input/style.module.scss
+++ b/components/common/Input/style.module.scss
@@ -13,7 +13,7 @@
 .input {
 	@include Inter_12();
 	width: 100%;
-	height: 24rem;
+	min-height: 24rem;
 	border: none;
 	border-bottom: 1rem solid $secondary-grey;
 	outline: none;
@@ -27,5 +27,12 @@
 	input {
 		color: red;
 		border-color: red;
+	}
+
+	input::placeholder {
+		padding: 5rem 0;
+		color: red;
+		height: 100%;
+		background: rgba(242, 230, 230, 1);
 	}
 }
