--- a/assets/style/mixins.scss
+++ b/assets/style/mixins.scss
@@ -37,3 +37,48 @@
 		background: $dark-button;
 	}
 }
+
+@mixin Loader() {
+	.loader {
+		display: block;
+		width: 200rem;
+		height: 40rem;
+		background-color: #0004;
+		position: relative;
+		border-radius: 50rem;
+		box-shadow: inset 0 0 0 2rem rgba(0, 0, 0, 0.05);
+	}
+	.loader:after {
+		border-radius: 50rem;
+		content: '';
+		position: absolute;
+		background-color: #fff;
+		left: 2rem;
+		top: 2rem;
+		bottom: 2rem;
+		right: 360rem;
+		animation: slide 2s linear infinite;
+		box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+	}
+
+	@keyframes slide {
+		0% {
+			right: 150rem;
+			left: 2rem;
+		}
+		5% {
+			left: 2rem;
+		}
+		50% {
+			right: 2rem;
+			left: 150rem;
+		}
+		55% {
+			right: 2rem;
+		}
+		100% {
+			right: 150rem;
+			left: 2rem;
+		}
+	}
+}
