--- a/components/unique/LoginForm/style.module.scss
+++ b/components/unique/LoginForm/style.module.scss
@@ -7,6 +7,7 @@ $margin-bottom-XL: 30rem;
 .authContainer {
 	@include formContainer();
 	@include fades();
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -14,13 +15,11 @@ $margin-bottom-XL: 30rem;
 	margin-bottom: 100rem;
 
 	@media (min-width: $M) {
-		padding: 20rem 135rem;
 		margin-bottom: 200rem;
 	}
 
 	@media (min-width: $XL) {
 		margin: 200rem 0;
-		padding: 20rem 10rem;
 	}
 
 	.title {
@@ -28,6 +27,7 @@ $margin-bottom-XL: 30rem;
 		text-align: center;
 		width: 251rem;
 		color: black;
+		margin-top: 20rem;
 		margin-bottom: 30rem;
 	}
 
@@ -104,5 +104,6 @@ $margin-bottom-XL: 30rem;
 		display: flex;
 		flex-direction: column;
 		gap: 5rem;
+		margin-bottom: 20rem;
 	}
 }
