--- a/components/unique/RegistrationForm/style.module.scss
+++ b/components/unique/RegistrationForm/style.module.scss
@@ -1,10 +1,12 @@
 @import '@/assets/style/containers';
 @import '@/assets/style/fontsMixins';
 @import '@/assets/style/animations';
+@import '@/assets/style/mixins';
 
 .authContainer {
 	@include formContainer();
 	@include fades();
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -12,17 +14,16 @@
 	margin-bottom: 100rem;
 
 	@media (min-width: $M) {
-		padding: 20rem 135rem;
 		margin-bottom: 200rem;
 	}
 
 	@media (min-width: $XL) {
 		margin: 200rem 0;
-		padding: 20rem 10rem;
 	}
 
 	.title {
 		@include InterMed_18();
+		margin-top: 20rem;
 		width: 251rem;
 		color: black;
 		margin-bottom: 30rem;
@@ -89,13 +90,6 @@
 		height: fit-content;
 	}
 
-	.buttonsContainer {
-		width: 330rem;
-		display: flex;
-		flex-direction: column;
-		gap: 5rem;
-	}
-
 	.error {
 		@include Inter_12();
 		text-align: center;
@@ -103,5 +97,13 @@
 		width: 330rem;
 		height: fit-content;
 		margin-bottom: 30rem;
+	}
+
+	.buttonsContainer {
+		width: 330rem;
+		display: flex;
+		flex-direction: column;
+		gap: 5rem;
+		margin-bottom: 20rem;
 	}
 }
