--- a/components/unique/SMSVerificationForm/style.module.scss
+++ b/components/unique/SMSVerificationForm/style.module.scss
@@ -45,6 +45,13 @@ $margin-bottom: 30rem;
 		margin-bottom: $margin-bottom;
 	}
 
+	.error {
+		@include Inter_12();
+		color: red;
+		width: fit-content;
+		margin-bottom: 5rem;
+	}
+
 	.button {
 		margin-bottom: 20rem;
 	}
