--- a/assets/style/colors.scss
+++ b/assets/style/colors.scss
@@ -11,6 +11,7 @@ $secondary-grey: rgba(179, 179, 179, 1);
 
 // Text
 $primary-text: rgba(65, 65, 65, 1);
+$error-text: rgba(250, 70, 70, 1);
 
 // Components
 $primary-orange-button: linear-gradient(180deg, #ff3a38 0%, #f42272 100%);
